--- a/2extension.html
+++ b/2extension.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html class="a-fullscreen">
+<html lang="en" class="a-fullscreen">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="/aframe.js"></script>
     <title>Extension Block 360</title>
   </head>
@@ -63,10 +64,7 @@
         <!--Cursor Circle-->
         <a-cursor color="red"></a-cursor>
       </a-camera>
-      <div class="a-loader-title" style="display: none">
-        Extension 360 Picture
-      </div></a-scene
-    >
+    </a-scene>
 
     <script>
       // Add event listener to the clickable plane
