--- a/4faraday.html
+++ b/4faraday.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html class="a-fullscreen">
+<html lang="en" class="a-fullscreen">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="/aframe.js"></script>
     <title>Faraday 360 Pciture</title>
   </head>
@@ -94,9 +95,6 @@
           cursor=""
           geometry=""></a-cursor>
       </a-camera>
-      <div class="a-loader-title" style="display: none">
-        Faraday 360 Picture
-      </div>
     </a-scene>
 
     <script>
