--- a/2.2exvideo.html
+++ b/2.2exvideo.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html class="a-fullscreen">
+<html lang="en" class="a-fullscreen">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="/aframe.js"></script>
     <title>Extension 360 Video</title>
   </head>
@@ -49,9 +50,6 @@
         <!--Cursor Circle-->
         <a-cursor color="red"></a-cursor>
       </a-camera>
-      <div class="a-loader-title" style="display: none">
-        Extension 360 Video
-      </div>
     </a-scene>
   </body>
 </html>
