--- a/4.4faradayvideo.html
+++ b/4.4faradayvideo.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html class="a-fullscreen">
+<html lang="en" class="a-fullscreen">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="/aframe.js"></script>
     <title>LSBU HUb 360 Video</title>
   </head>
@@ -54,10 +55,6 @@
         <!--Cursor Circle-->
         <a-cursor color="red" cursor=""></a-cursor>
       </a-camera>
-
-      <div class="a-loader-title" style="display: none">
-        Faraday Wing 360 Video
-      </div>
     </a-scene>
   </body>
 </html>
