Last touch ups 4

--- a/index.html
+++ b/index.html
@@ -183,7 +183,11 @@
     </nav>
     <div class="main-section">
       <div class="content">
-        <img src=".//pics/lsbulogo1.png" class="logo" />
+        <img
+          src=".//pics/lsbulogo1.png"
+          alt="London South Bank University Logo"
+          class="logo" />
+
         <h1>Welcome London South Bank University VR Tour!</h1>
         <a href="/vrhome.html" class="button">Start VR Tour</a>
         <div class="dropdown-container">
