--- a/vrhome.html
+++ b/vrhome.html
@@ -2,6 +2,8 @@
 <html lang="en" class="a-fullscreen">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <script src="/aframe.js"></script>
     <title>VR Home Base</title>
   </head>
