Last touch up 5

--- a/1.1hubvideo.html
+++ b/1.1hubvideo.html
@@ -7,12 +7,7 @@
     <title>LSBU HUb 360 Video</title>
   </head>
   <body>
-    <a-scene
-      inspector=""
-      keyboard-shortcuts=""
-      screenshot=""
-      vr-mode-ui=""
-      device-orientation-permission-ui="">
+    <a-scene>
       <!-- Add a 360-degree video -->
       <a-videosphere
         src="/videos/LSBU Hub.mp4"
@@ -50,7 +45,7 @@
           position="-0.81 0.75 0"
           text=""></a-text>
       </a-entity>
-
+      <!--CAMERA-->
       <a-camera
         position="-4.590613364505865 1.53475 1.5126778969577817"
         rotation="-13.292620847035105 198.8163549103948 0"
