--- a/1hub.html
+++ b/1hub.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" class="a-fullscreen">
   <head>
+    <!-- Document metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- A-Frame library -->
     <script src="/aframe.js"></script>
+    <!-- Title of the page -->
     <title>Hub Picture 360</title>
   </head>
   <body>
+    <!-- A-Frame scene -->
     <a-scene>
       <!-- Add a 360-degree panoramic image -->
       <a-sky
@@ -14,14 +18,14 @@
         rotation="0 -90 0"
         position="0 -31.06 0"></a-sky>
 
-      <!-- Add text on the picture -->
+      <!-- Text overlay on the picture -->
       <a-text
         value="Welcome to The Hub"
         color="white"
         position="-1 2 -4"
         scale="2 2 2"></a-text>
 
-      <!-- Add a plane with an image -->
+      <!-- Plane with an image -->
       <a-plane
         color="white"
         position="5.9 2.06 -2.93"
@@ -29,7 +33,9 @@
         height="3"
         rotation="0 -49.85 0"
         id="clickablePlane">
+        <!-- Image embedded in the plane -->
         <a-image src="/pics/hublanding.jpg" width="3" height="3"></a-image>
+        <!-- Text prompt -->
         <a-text
           value="Click on Video"
           color="black"
@@ -39,8 +45,9 @@
           text="color: #ffffff"></a-text>
       </a-plane>
 
-      <!--Return VR HOME-->
+      <!-- Return to VR Home button -->
       <a-entity position="-2.97 -0.06 -5.44047" rotation="0.36 27.8 0">
+        <!-- Button shape -->
         <a-box
           depth="1"
           height="1"
@@ -48,17 +55,18 @@
           onclick="window.location.href = '/vrhome.html';"
           material="src: /pics/box.gif">
         </a-box>
+        <!-- Button text -->
         <a-text
           value="Back to Menu"
           color="white"
           position="-0.7 0.68 0"></a-text>
       </a-entity>
-      <!--Camera-->
+      <!-- Camera entity -->
       <a-camera
         position="1.20065 1.53475 -0.39881"
         rotation="-8.823550045014683 126.16530648780733 0"
         wasd-controls="acceleration: 25; easing: 10;">
-        <!--Cursor Circle-->
+        <!-- Cursor for interaction -->
         <a-cursor color="red"></a-cursor>
       </a-camera>
     </a-scene>
