--- a/1hub.html
+++ b/1hub.html
@@ -70,12 +70,13 @@
         <a-cursor color="red"></a-cursor>
       </a-camera>
     </a-scene>
-
+    <!-- JavaScript code to handle click event -->
     <script>
       // Add event listener to the clickable plane
       var clickablePlane = document.getElementById("clickablePlane");
       clickablePlane.addEventListener("click", function () {
-        window.location.href = "/1.1hubvideo.html"; // Redirect to the next page
+        // Redirect to the next page when clicked
+        window.location.href = "/1.1hubvideo.html";
       });
     </script>
   </body>
