--- a/1.1hubvideo.html
+++ b/1.1hubvideo.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a-scene>
-      <!-- Add a 360-degree video -->
+      <!-- Add a 360-degree video 1-->
       <a-videosphere
         src="/videos/LSBU Hub.mp4"
         autoplay="true"
