--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <nav>
       <a href="/index.html">Home</a>
       <a href="/aboutus.html">About Us</a>
-      <a href="/contactus.html">Contact Us</a>
+      <a href="">Contact Us</a>
     </nav>
     <div class="main-section">
       <div class="content">
